lipu-nasin-pona: lil update

--- a/lipu-nasin-pona/38.md
+++ b/lipu-nasin-pona/38.md
@@ -12,24 +12,24 @@ sidebar:
 
 {:.loseta}
 |-:|:-:|:-
-| 上德不德               |  | Superior virtue is not virtuous
-| 是以有德               |  | Therefore it has virtue.
-| 下德不失德             |  | Inferior virtue never fails to be virtuous
-| 是以无德               |  | Therefore it has no virtue.
-| 上德无为               |  | Superior virtue does not “act”
-| 而无以为               |  | And has no intentions.
-| 下德为之               |  | Inferior virtue “acts”
-| 而有以为               |  | And always has intentions.
-| 上仁为之               |  | Superior humaneness “acts”
-| 而无以为               |  | But has no intentions.
-| 上义为之               |  | Superior justice “acts”
-| 而有以为               |  | But but has intentions.
-| 上礼为之<wbr/>而莫之应 |  | Superior propriety “acts” and if you don't respond
-| 则攘臂<wbr/>而扔之     |  | They will roll up their sleeves and threaten you.
-| 故失道<wbr/>而后德     |  | Thus, when the Way is lost there is virtue
-| 失德<wbr/>而后仁       |  | When virtue is lost there is humaneness
-| 失仁<wbr/>而后义       |  | When humaneness is lost there is justice
-| 失义<wbr/>而后礼       |  | And when justice is lost there is propriety.
+| 上德不德               | pona _sewi_ li pona ala la, | Superior virtue is not virtuous
+| 是以有德               | ona li jo e pona.           | Therefore it has virtue.
+| 下德不失德             | pona _anpa_ li weka ala la, | Inferior virtue never fails to be virtuous
+| 是以无德               | ona li weka e pona.         | Therefore it has no virtue.
+| 上德无为               | pona sewi li pali ala la,   | Superior virtue does not “act”
+| 而无以为               | ona li _wile_ ala.          | And has no intentions.
+| 下德为之               | pona anpa li pali la,       | Inferior virtue “acts”
+| 而有以为               | ona li _wile_ _ale_.        | And always has intentions.
+| 上仁为之               | _olin_ sewi li pali la,     | Superior humaneness “acts”
+| 而无以为               | ona li _wile_ _ala_.        | But has no intentions.
+| 上义为之               | _sama_ sewi li pali la,     | Superior justice “acts”
+| 而有以为               | ona li _wile_ _ale_.        | But has intentions.
+| 上礼为之<wbr/>而莫之应 | PROPRIETY sewi li tawa jan, jan li _pali sama_ ala la,  | Superior propriety “acts” and if you don't respond
+| 则攘臂<wbr/>而扔之     | ona li pilin utala li pilin mu. | They will roll up their sleeves and threaten you.
+| 故失道<wbr/>而后德     | tenpo li weka e nasin la, ona li jo e pona. | Thus, when the Way is lost there is virtue
+| 失德<wbr/>而后仁       | tenpo li weka e pona la, ona li jo e olin. | When virtue is lost there is humaneness
+| 失仁<wbr/>而后义       | tenpo li weka e olin la, ona li jo e sama. | When humaneness is lost there is justice
+| 失义<wbr/>而后礼       | tenpo li weka e sama la, ona li jo e PROPRIETY. | And when justice is lost there is propriety.
 | 夫礼者<wbr/>忠信之薄   |  | Now “propriety” is the external appearance of loyalty and sincerity
 | 而乱之首               |  | And the beginning of disorder.
 | 前识者<wbr/>道之华     |  | Occult abilities are just flowers of the Way
