lipu-nasin-pona: redo parts of 1; add 8 & 9 & 11
also tweaks & layout

--- a/lipu-nasin-pona/1.md
+++ b/lipu-nasin-pona/1.md
@@ -9,19 +9,20 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
+
 {:.loseta}
 |:-:|-|-
-| 道可道<wbr/>非常道          | jan li ken nasin e nasin. nasin ni li sama ala e nasin lon. | The Way that can be followed is not the eternal Way.
-| 名可名<wbr/>非常名          | jan li ken nimi e nimi. nimi ni li sama ala e nimi lon.     | The name that can be named is not the eternal name.
-| 无名天<wbr/>地之始          | ona pi nimi ala li tan e sewi li tan e ma.                  | The nameless is the origin of heaven and earth
-| 有名万<wbr/>物之母          | nimi li mama e ijo ale.                                     | While naming is the origin of the myriad things.
-| 故常无欲<wbr/>以观其妙 | jan pi wile ala li lukin e nasa wawa.                       | Therefore, always desireless, you see the mystery
-| 常有欲<wbr/>以观其徵   | jan pi wile ale li lukin e ilo lon.                         | Ever desiring, you see the manifestations.
-| 此两者                 | tu ni la,                                                   | These two are the same—
-| 同出而异名             | ona li pana wan. taso la, nimi ona li sama ala.             | When they appear they are named differently.
-| 同谓之玄              | sama ni li seme.                                            | This sameness is the mystery,
-| 玄之又玄              | weka sona li sama ni.                                       | Mystery within mystery;
-| 众妙之门              | ni li open e nasa wawa mute.                                | The door to all marvels.
+| 道可道<wbr/>非常道 | nasin la, jan li ken nasin. taso la, ni li lon ala e nasin sewi. | The Way that can be followed is not the eternal Way.
+| 名可名<wbr/>非常名 | nimi la, jan li ken nimi. taso la, ni li lon ala e nimi sewi.    | The name that can be named is not the eternal name.
+| 无名<wbr/>天地之始 | ona pi jo ala e nimi la: sewi en ma li tan ni.                   | The nameless is the origin of heaven and earth
+| 有名<wbr/>万物之母 | ona pi jo nimi la: ijo ale li tan ni.                            | While naming is the origin of the myriad things.
+| 故常无欲<wbr/>以观其妙 | jan pi wile ala li lukin e wawa nasa.                        | Therefore, always desireless, you see the mystery
+| 常有欲<wbr/>以观其徵   | jan pi wile ale li lukin e ijo lon.                          | Ever desiring, you see the manifestations.
+| 此两者                 | tu ni la,                                                    | These two are the same—
+| 同出而异名             | ona li tan wan. taso, nimi ona li sama ala.                  | When they appear they are named differently.
+| 同谓之玄               | sama ni li seme.                                             | This sameness is the mystery,
+| 玄之又玄               | weka sona li sama ni.                                        | Mystery within mystery;
+| 众妙之门               | ni li open e nasa wawa mute.                                 | The door to all marvels.
 
 {% include kipisi-nav.html num=1 %}
 
