--- a/lipu-nasin-pona/16.md
+++ b/lipu-nasin-pona/16.md
@@ -26,7 +26,7 @@ sidebar:
 | 公乃王                   |                                     | Impartiality is kingship.
 | 王乃天                   | lawa li sewi.                       | Kingship is Heaven.
 | 天乃道                   | sewi li nasin.                      | Heaven is the Way
-| 道乃久                   | nasin sewi li tenpo ale.            | the Way is eternal.
+| 道乃久                   | sewi Nasin li tenpo ale.            | the Way is eternal.
 | 没身不殆                 | sijelo li moli la, jan li moli ala. | Though you lose the body, you do not die.
 
 {% include kipisi-nav.html num=16 %}
