--- a/lipu-nasin-pona/4.md
+++ b/lipu-nasin-pona/4.md
@@ -12,7 +12,7 @@ sidebar:
 
 {:.loseta}
 |:-:|-|-
-| 道冲而用<wbr/>之或不盈 | nasin sewi li suli mute. jan li ken ala pali weka e ona. | The Way is so vast that when you use it, something is always left.
+| 道冲而用<wbr/>之或不盈 | sewi Nasin li suli mute. jan li ken ala pali weka e ona. | The Way is so vast that when you use it, something is always left.
 | 渊兮                  | suli a!                                                  | How deep it is!
 | 似万物之宗            | ona li mama e ijo ale.                                   | It seems to be the ancestor of the myriad things.
 | 挫其锐                | ona li suwi e wawa.                                      | It blunts sharpness
@@ -21,7 +21,7 @@ sidebar:
 | 同其尘                | ona li wan e tu.                                         | Unifies with the mundane.
 | 湛兮                  | wawa a!                                                  | It is so full!
 | 似或存                | tenpo kama la ona li lon.                                | It seems to have remainder.
-| 吾不知<wbr/>谁之子     | mi suno ala la: seme li mama ona?                        | It is the child of I-don't-know-who.
+| 吾不知<wbr/>谁之子    | mi suno ala la: seme li mama ona?                        | It is the child of I-don't-know-who.
 | 象帝之先              | ona li mama e jan lawa wawa.                             | And prior to the primeval Lord-on-high.
 
 {% include kipisi-nav.html num=4 %}
@@ -29,8 +29,11 @@ sidebar:
 -------
 {:#sitelen}
 
-nasin sewi li suli mute. jan li ken ala pali weka e ona.
-{:data-sitelen="true" data-sitelen-ratio="3"}
+sewi Nasin li suli mute.
+{:data-sitelen="true" data-sitelen-ratio="1"}
+
+jan li ken ala pali weka e ona.
+{:data-sitelen="true" data-sitelen-ratio="2"}
 
 suli a!
 {:data-sitelen="true" data-sitelen-ratio="1"}
