--- a/lipu-nasin-pona/42.md
+++ b/lipu-nasin-pona/42.md
@@ -12,7 +12,7 @@ sidebar:
 
 {:.loseta}
 |:-:|-|-
-| 道生一<wbr/>一生二   | nasin sewi li mama e wan. wan ni li mama e tu.   | The Way produces one, one produces two.
+| 道生一<wbr/>一生二   | sewi Nasin li mama e wan. wan ni li mama e tu.   | The Way produces one, one produces two.
 | 二生三<wbr/>三生万物 | tu ni li mama e mute. mute ni li mama e ilo ale. | The two produce the three and the three produce all things.
 | 万物负阴而抱阳       | ilo ale li _lawa tan_ kon sewi In li _awen tan_ kon sewi An. | All things submit to yin and embrace yang.
 | 冲气以为和           |  | They soften their energy to achieve harmony.
