--- a/lipu-nasin-pona/9.md
+++ b/lipu-nasin-pona/9.md
@@ -12,12 +12,12 @@ sidebar:
 
 {:.loseta}
 |:-:|-|-
-| 持而盈之<wbr/>不如其已 |  | To hold until full is not as good as stopping.
-| 揣而锐之<wbr/>不可长保 |  | An oversharpened sword cannot last long.
-| 金玉满堂<wbr/>莫之能守 |  | A room filled with gold and jewels cannot be protected.
-| 富贵而骄<wbr/>自遗其咎 |  | Boasting of wealth and virtue brings your demise.
-| 功遂身退         |  | After finishing the work, withdraw.
-| 天之道           |  | This is the Way of Heaven.
+| 持而盈之<wbr/>不如其已 | _jan li awen jo e ale la: pake li pona._ | To hold until full is not as good as stopping.
+| 揣而锐之<wbr/>不可长保 | _jan li pali e kiki la: kiki ni li ken ala kiki tawa tenpo kama._ | An oversharpened sword cannot last long.
+| 金玉满堂<wbr/>莫之能守 | ijo mani ale la: jan ala li ken awen. | A room filled with gold and jewels cannot be protected.
+| 富贵而骄<wbr/>自遗其咎 | jan li toki tan suli pi ona la: _ona li weka tawa tenpo kama._ | Boasting of wealth and virtue brings your demise.
+| 功遂身退         | _pali pini_ la: o lape. | After finishing the work, withdraw.
+| 天之道           | ni li nasin sewi. | This is the Way of Heaven.
 
 {% include kipisi-nav.html num=9 %}
 
