--- a/lipu-nasin-pona/10.md
+++ b/lipu-nasin-pona/10.md
@@ -12,8 +12,8 @@ sidebar:
 
 {:.loseta}
 |:-:|-|-
-| 载营块抱一 |  | Pacifying the agitated material soul and holding to oneness:
-| 能无离乎   |  | Are you able to avoid separation?
+| 载营块抱一 | _??_ o awen e wan la, | Pacifying the agitated material soul and holding to oneness:
+| 能无离乎   | jan li ken ala ken _weka e tu_? | Are you able to avoid separation?
 | 专气致柔   |  | Focusing your energy on the release of tension:
 | 能婴儿乎   |  | Can you be like an infant?
 | 涤除玄览   |  | In purifying your insight:
