lipu-nasin-pona: 12 & 14

--- a/lipu-nasin-pona/12.md
+++ b/lipu-nasin-pona/12.md
@@ -12,20 +12,26 @@ sidebar:
 
 {:.loseta}
 |:-:|-|-
-| 五色令人目盲       |  | The five colors blind our eyes.
-| 五音令人耳聋       |  | The five tones deafen our ears.
-| 五味令人口爽       |  | The five flavors confuse our taste.
-| 驰骋畋猎<wbr/>令人心发狂 |  | Racing and hunting madden our minds.
-| 难得之货<wbr/>令人行妨   |  | Possessing rare treasures brings about harmful behavior.
-| 是以圣人<wbr/>为腹不为目 |  | Therefore the sage acts from his gut, and not from his eyes.
-| 故去彼取此         |  | He lets go of that and chooses this.
+| 五色令人目盲                   | kule ale li pakala e lukin.             | The five colors blind our eyes.
+| 五音令人耳聋                   | kalama ale li pakala e kute.            | The five tones deafen our ears.
+| 五味令人口爽                   | namako ale li pakala e uta.             | The five flavors confuse our taste.
+| 驰骋畋猎<wbr/>令人心发狂       | tawa en alasa li pakala e lawa.         | Racing and hunting madden our minds.
+| 难得之货<wbr/>令人行妨         | ijo mani li pakala e pona jan.          | Possessing rare treasures brings about harmful behavior.
+| 是以<wbr/>圣人为腹<wbr/>不为目 | o pali tan pilin, o pali ala tan lukin. | Therefore the sage acts from his gut, and not from his eyes.
+| 故<wbr/>去彼取此               | o weka e ona, o _anu_ e ni.             | He lets go of that and chooses this.
 
 {% include kipisi-nav.html num=12 %}
 
 -------
 {:#sitelen}
 
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+kule ale li pakala e lukin.
+kalama ale li pakala e kute.
+namako ale li pakala e uta.
+tawa en alasa li pakala e lawa.
+ijo mani li pakala e pona jan.
+o pali tan pilin, o pali ala tan lukin.
+o weka e ona, o anu e ni.
+{:data-sitelen="true" data-sitelen-ratio="0.2"}
 
 {% include sitelen-sitelen-renderer.html %}
