--- a/lipu-nasin-pona/14.md
+++ b/lipu-nasin-pona/14.md
@@ -12,26 +12,26 @@ sidebar:
 
 {:.loseta}
 |:-:|-|-
-| 视之不见       |  | Look for it, it cannot be seen.
-| 名曰夷         |  | It is called the distant.
-| 听之不闻       |  | Listen for it, it cannot be heard.
-| 名曰希         |  | It is called the rare.
-| 搏之不得       |  | Reach for it, it cannot be gotten.
-| 名曰微         |  | It is called the subtle.
-| 此三者不可致诘 |  | These three ultimately cannot be fathomed.
-| 故混而为一     |  | Therefore they join to become one.
-| 其上不皎       |  | Its top is not bright;
-| 其下不昧       |  | Its bottom is not dark;
-| 绳绳不可名<wbr/> 复归于无物 |  | Existing continuously, it cannot be named and it returns to no-thingness.
-| 是谓无状之状   |  | Thus, it is called the formless form,
-| 无物之象       |  | The image of no-thing.
-| 是谓惚恍       |  | This is called the most obscure.
-| 迎之不见其首   |  | Go to meet it, you cannot see its face.
-| 随之不见其后   |  | Follow it, you cannot see its back.
-| 执古之道       |  | By holding to the ancient Way
-| 以御今之有     |  | You can manage present existence
-| 能知古始       |  | And know the primordial beginning.
-| 是谓道纪       |  | This is called the very beginning thread of the Way.
+| 视之不见             | o lukin e ona la, jan li ken ala lukin. | Look for it, it cannot be seen.
+| 名曰夷               | nimi ona li _..._                       | It is called the distant.
+| 听之不闻             | o kute e ona la, jan li ken ala kute.   | Listen for it, it cannot be heard.
+| 名曰希               | nimi ona li _..._                       | It is called the rare.
+| 搏之不得             | o _luka_ e ona la, jan li ken ala jo.   | Reach for it, it cannot be gotten.
+| 名曰微               | nimi ona li _..._                       | It is called the subtle.
+| 此三者<wbr/>不可致诘 | mute ni la, jan li ken ala sona.        | These three ultimately cannot be fathomed.
+| 故<wbr/>混而为一     | mute ni li wan.                         | Therefore they join to become one.
+| 其上不皎             | lawa pi wan ni li walo ala.             | Its top is not bright;
+| 其下不昧             | anpa pi wan ni li pimeja ala.           | Its bottom is not dark;
+| 绳绳不可名<wbr/>复归于无物 | ni li _lon tan tenpo ale_.<wbr/> jan li ken ala nimi e ni.<wbr/> ni li _kama sin tawa weka_. | Existing continuously, it cannot be named and it returns to no-thingness.
+| 是谓<wbr/>无状之状   | nimi ni li _sijelo pi sijelo ala_, | Thus, it is called the formless form,
+| 无物之象       | li _sitelen pi ijo ala_. | The image of no-thing.
+| 是谓惚恍       | nimi ni li _nasa sona_. | This is called the most obscure.
+| 迎之不见其首   | o _toki_ e ni la, jan li ken ala lukin e sinpin. | Go to meet it, you cannot see its face.
+| 随之不见其后   | o _tawa_ e ni la, jan li ken ala lukin e monsi. | Follow it, you cannot see its back.
+| 执古之道       | o awen e sewi Nasin la, | By holding to the ancient Way
+| 以御今之有     | jan li lawa e _tenpo ni_. | You can manage present existence
+| 能知古始       | o sona e open majuna. | And know the primordial beginning.
+| 是谓道纪       | nimi ni li open pi sewi Nasin. | This is called the very beginning thread of the Way.
 
 {% include kipisi-nav.html num=14 %}
 
